homepage css spacing fix

--- a/client/src/components/pages/Home.css
+++ b/client/src/components/pages/Home.css
@@ -4,14 +4,14 @@
   background-size: cover;
   background-position: center center;
   opacity: 1;
-  height: 100vh;
+  height: 92vh;
   width: 100vw;
   padding-top: 0px;
 }
 
 .home-title {
   position: relative;
-  top: 100px;
+  top: 25px;
   margin: 0px auto 50px auto;
   font-size: x-large;
   text-align: center;
@@ -21,20 +21,21 @@
   position: relative;
   background-color: var(--mint);
   width: 400px;
-  margin: 60px auto 2px auto; /* Reduce top margin to move it up */
+  margin: -10px auto 2px auto; /* Reduce top margin to move it up */
   display: flex;
   justify-content: center;
   align-items: center;
   flex-direction: column;
   gap: 10px;
-  padding: 20px; /* Add some padding for better spacing */
+  padding: 10px; /* Add some padding for better spacing */
 }
 
 .challenge {
   position: relative;
-  font-size: x-large;
+  font-size: 15px;
   text-align: center;
-  margin-top: 40px; /* Ensure space above ChallengeTimer */
+  margin-top: 0px; /* Ensure space above ChallengeTimer */
+  padding: 0;
 }
 
 #photo-container {
@@ -63,7 +64,7 @@ form {
   display: flex;
   justify-content: center;
   flex-direction: column;
-  padding: 50px;
+  padding: 30px;
   align-items: center;
 }
 
